CI: Add admission webhook support to openshift (#6393)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2366,8 +2366,8 @@ jobs:
       - provision-openshift-cluster:
           crio: false
           suffix: -rhel
-          flavor: lite
-          version: 0.6.4
+          flavor: multi
+          version: 0.6.5
 
   provision-gke-rhel-api-e2e-tests:
     executor: custom
@@ -2470,9 +2470,9 @@ jobs:
     steps:
       - provision-openshift-cluster:
           crio: false
-          flavor: lite
+          flavor: multi
           gate-label: ci-openshift-tests
-          version: 0.6.4
+          version: 0.6.5
 
   provision-openshift-crio-api-e2e-tests:
     machine: true
@@ -2482,7 +2482,7 @@ jobs:
           flavor: multi
           gate-label: ci-openshift-crio-tests
           suffix: -crio
-          version: 0.6.4
+          version: 0.6.5
 
   provision-eks-api-e2e-tests:
     executor: custom
@@ -2991,8 +2991,8 @@ jobs:
           run-on-tags: true
       - run-openshift-tests:
           suffix: -rhel
-          flavor: lite
-          version: 0.6.4
+          flavor: multi
+          version: 0.6.5
           use-main-rhel: true
           sensor-deploy-flavor: helm
 
@@ -3697,8 +3697,8 @@ jobs:
     steps:
       - run-openshift-tests:
           gate-label: ci-openshift-tests
-          flavor: lite
-          version: 0.6.4
+          flavor: multi
+          version: 0.6.5
 
   openshift-crio-api-e2e-tests:
     executor: custom
@@ -3718,7 +3718,7 @@ jobs:
           suffix: "-crio"
           gate-label: ci-openshift-crio-tests
           flavor: multi
-          version: 0.6.4
+          version: 0.6.5
 
   eks-api-e2e-tests:
     executor: custom
