--- a/ui/apps/platform/package.json
+++ b/ui/apps/platform/package.json
@@ -12,7 +12,7 @@
     "dependencies": {
         "@apollo/client": "^3.0.2",
         "@lifeomic/axios-fetch": "^1.4.2",
-        "@tippy.js/react": "^3.1.1",
+        "@stackrox/ui-components": "*",
         "axios": "^0.18.1",
         "computed-style-to-inline-style": "^3.0.0",
         "core-js": "^3.6.5",
@@ -35,7 +35,6 @@
         "graphql": "^15.3.0",
         "history": "^4.9.0",
         "html2canvas": "1.0.0-rc.1",
-        "initials": "^3.1.0",
         "js-base64": "^2.5.2",
         "jspdf": "^1.5.3",
         "jspdf-autotable": "^3.5.3",
@@ -101,7 +100,7 @@
         "build": "yarn tailwind && GENERATE_SOURCEMAP=false react-scripts build",
         "test": "JEST_JUNIT_UNIQUE_OUTPUT_NAME=true JEST_JUNIT_OUTPUT_DIR=${TEST_RESULTS_OUTPUT_DIR:-test-results}/reports react-scripts test --coverage --reporters=default --reporters=jest-junit",
         "test-watch": "react-scripts test",
-        "lint": "yarn tailwind && NODE_PATH=src eslint --ext .js,.ts,.tsx src cypress tailwind.config.js .prettierrc.js .eslintrc.js",
+        "lint": "yarn tailwind && NODE_PATH=src eslint --quiet --ext .js,.ts,.tsx src cypress tailwind.config.js .prettierrc.js .eslintrc.js",
         "cypress-open": "./scripts/cypress.sh open --config defaultCommandTimeout=8000",
         "cypress-spec": "./scripts/cypress.sh run --spec",
         "cypress-demo-open": "./scripts/cypress.sh open --config integrationFolder=cypress/demo",
