--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
         "node": ">=10.22.0"
     },
     "scripts": {
+        "postinstall": "ln -s ../../packages/ui-components/node_modules/@storybook/addon-docs ./node_modules/@storybook/addon-docs; ln -s ../../packages/ui-components/node_modules/@storybook/addon-essentials ./node_modules/@storybook/addon-essentials",
         "lerna:version": "lerna version --no-git-tag-version --no-push --yes",
         "postlerna:version": "chalk bold red 'Please commit the changes and create a PR!'",
         "prelerna:publish": "if [ ! \"$CI\" = true ]; then chalk bold red 'Not expected to be used outside of CI context.'; exit 1; fi",
@@ -25,13 +26,14 @@
         "prestart": "chalk italic yellowBright 'Why CI=true? See https://github.com/facebook/create-react-app/issues/8685'",
         "start": "CI=true lerna run start --parallel --stream",
         "start:coverage": "CI=true lerna run start:coverage --scope @stackrox/platform-app --stream",
-        "storybook": "lerna run --scope @stackrox/platform-app storybook --stream",
-        "lint": "lerna run lint --parallel --stream -- --quiet",
-        "test": "CI=true TEST_RESULTS_OUTPUT_DIR=../../test-results lerna run test --parallel --stream",
-        "test-e2e": "TEST_RESULTS_OUTPUT_DIR=../../test-results lerna run test-e2e --parallel --stream",
+        "storybook": "yarn build:packages && lerna exec --scope @stackrox/ui-components -- yarn storybook",
+        "lint": "yarn build:packages && lerna run lint --parallel --stream",
+        "test": "yarn build:packages && CI=true TEST_RESULTS_OUTPUT_DIR=../../test-results lerna run test --parallel --no-bail --stream",
+        "test-e2e": "TEST_RESULTS_OUTPUT_DIR=../../test-results lerna run test-e2e --parallel --no-bail --stream",
         "test-e2e:coverage": "TEST_RESULTS_OUTPUT_DIR=../../test-results lerna run test-e2e:coverage --parallel --stream",
         "posttest-e2e:coverage": "mv apps/platform/coverage/ ./test-results/artifacts/",
         "test-e2e-demo": "TEST_RESULTS_OUTPUT_DIR=../../test-results lerna run test-e2e-demo --scope @stackrox/platform-app --stream",
+        "build:packages": "lerna run build --stream --ignore @stackrox/*-app",
         "prebuild": "yarn clean",
         "build": "lerna run build --stream",
         "postbuild": "mv apps/platform/build/ .",
