--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1810,6 +1810,7 @@ commands:
             - ~/.cache/Cypress # Cypress binary will be put there, see https://docs.cypress.io/guides/guides/continuous-integration.html#Example-circle-yml-v2-config-file-with-yarn
             - ui/node_modules # CircleCI doesn't support globbing here https://circleci.com/docs/2.0/caching/#basic-example-of-dependency-caching so all `node_nodules` need to be listed
             - ui/apps/platform/node_modules
+            - ui/packages/ui-components/node_modules
             - ui/packages/tailwind-config/node_modules
 
   restore-npm-deps-cache:
