--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -10,6 +10,8 @@ updates:
     schedule:
       interval: 'weekly'
       day: 'wednesday'
+    # always update package.json files to match new version for any package in UI monorepo
+    versioning-strategy: increase  
     open-pull-requests-limit: 10
     reviewers:
       - 'alwayshooin'
