--- a/ui/package.json
+++ b/ui/package.json
@@ -17,7 +17,7 @@
         "node": ">=10.22.0"
     },
     "scripts": {
-        "postinstall": "ln -sf ../../packages/ui-components/node_modules/@storybook/addon-docs ./node_modules/@storybook/addon-docs; ln -s ../../packages/ui-components/node_modules/@storybook/addon-essentials ./node_modules/@storybook/addon-essentials",
+        "postinstall": "ln -sf ../../packages/ui-components/node_modules/@storybook/addon-docs ./node_modules/@storybook/addon-docs; ln -sf ../../packages/ui-components/node_modules/@storybook/addon-essentials ./node_modules/@storybook/addon-essentials",
         "lerna:version": "lerna version --no-git-tag-version --no-push --yes",
         "postlerna:version": "chalk bold red 'Please commit the changes and create a PR!'",
         "prelerna:publish": "if [ ! \"$CI\" = true ]; then chalk bold red 'Not expected to be used outside of CI context.'; exit 1; fi",
