--- a/ui/apps/platform/package.json
+++ b/ui/apps/platform/package.json
@@ -29,7 +29,6 @@
         "deepmerge": "^3.2.0",
         "events": "^3.2.0",
         "file-saver": "^1.3.8",
-        "flat": "^4.1.0",
         "formik": "^2.1.4",
         "framer-motion": "^1.11.1",
         "graphql": "^15.3.0",
@@ -129,6 +128,7 @@
         "@testing-library/react": "^9.1.4",
         "@testing-library/react-hooks": "^3.2.1",
         "@types/jest": "^25.2.3",
+        "@types/lodash": "^4.14.161",
         "@types/node": "^14.0.11",
         "@types/react": "^16.9.35",
         "@types/react-dom": "^16.9.8",
