ROX-5336: Enabling admission controller for Openshift (#6304)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2883,14 +2883,11 @@ jobs:
       - SCANNER_SUPPORT: true
       - LOAD_BALANCER: lb
       - ROX_EVENT_TIMELINE_UI: true
-      - ROX_ADMISSION_CONTROL_SERVICE: true
-      - ROX_ADMISSION_CONTROL_SERVICE_ENFORCE_ON_UPDATE: true
       - ROX_POLICY_IMPORT_EXPORT: true
       - ROX_CURRENT_USER_INFO: true
       - ROX_AUTH_TEST_MODE_UI: true
       - ROX_SUPPORT_SLIM_COLLECTOR_MODE: true
       - ROX_AWS_SECURITY_HUB_INTEGRATION: true
-      - ROX_CLUSTER_HEALTH_MONITORING: true
       - ROX_NETWORK_GRAPH_EXTERNAL_SRCS: true
 
     steps:
@@ -2956,10 +2953,7 @@ jobs:
       - LOAD_BALANCER: lb
       - ADMISSION_CONTROLLER: true
       - ADMISSION_CONTROLLER_UPDATES: true
-      - ROX_ADMISSION_CONTROL_SERVICE: true
-      - ROX_ADMISSION_CONTROL_ENFORCE_ON_UPDATE: true
       - ROX_AUTH_TEST_MODE_UI: true
-      - ROX_CLUSTER_HEALTH_MONITORING: true
       - ROX_NETWORK_GRAPH_PORTS: true
       - ROX_NETWORK_GRAPH_EXTERNAL_SRCS: true
 
@@ -2985,6 +2979,8 @@ jobs:
       - ROX_SUPPORT_SLIM_COLLECTOR_MODE: true
       - ROX_NETWORK_GRAPH_PORTS: true
       - ROX_NETWORK_GRAPH_EXTERNAL_SRCS: true
+      - ADMISSION_CONTROLLER: true
+      - ADMISSION_CONTROLLER_UPDATES: true
 
     steps:
       - checkout
@@ -3012,8 +3008,6 @@ jobs:
       - LOAD_BALANCER: lb
       - ADMISSION_CONTROLLER: true
       - ADMISSION_CONTROLLER_UPDATES: true
-      - ROX_ADMISSION_CONTROL_SERVICE: true
-      - ROX_ADMISSION_CONTROL_ENFORCE_ON_UPDATE: true
       - ROX_AUTH_TEST_MODE_UI: true
       - ROX_SUPPORT_SLIM_COLLECTOR_MODE: true
       - ROX_NETWORK_GRAPH_PORTS: true
@@ -3042,8 +3036,6 @@ jobs:
       - LOAD_BALANCER: lb
       - ADMISSION_CONTROLLER: true
       - ADMISSION_CONTROLLER_UPDATES: true
-      - ROX_ADMISSION_CONTROL_SERVICE: true
-      - ROX_ADMISSION_CONTROL_ENFORCE_ON_UPDATE: true
       - ROX_AUTH_TEST_MODE_UI: true
       - ROX_ROCKSDB: true
       - ROX_SUPPORT_SLIM_COLLECTOR_MODE: true
@@ -3700,6 +3692,8 @@ jobs:
       - ROX_SUPPORT_SLIM_COLLECTOR_MODE: true
       - ROX_NETWORK_GRAPH_PORTS: true
       - ROX_NETWORK_GRAPH_EXTERNAL_SRCS: true
+      - ADMISSION_CONTROLLER: true
+      - ADMISSION_CONTROLLER_UPDATES: true
 
     steps:
       - run-openshift-tests:
@@ -3720,6 +3714,8 @@ jobs:
       - ROX_SUPPORT_SLIM_COLLECTOR_MODE: true
       - ROX_NETWORK_GRAPH_PORTS: true
       - ROX_NETWORK_GRAPH_EXTERNAL_SRCS: true
+      - ADMISSION_CONTROLLER: true
+      - ADMISSION_CONTROLLER_UPDATES: true
 
     steps:
       - run-openshift-tests:
