--- a/roxctl/help/help.properties
+++ b/roxctl/help/help.properties
@@ -171,5 +171,14 @@ sensor.generate.long =
 sensor.short = Commands related to deploying StackRox services in secured clusters.
 sensor.long =
 
+# Helm Commands
+
+helm.short = Commands related to StackRox Helm Charts.
+helm.long =
+
+helm.output.short = Output a Helm Chart.
+helm.output.long =
+
+
 version.short = Display the current roxctl version.
 version.long = Display the current roxctl version.
