--- a/image/templates/helm/stackrox-central/templates/01-central-03-diagnostics-rbac.yaml
+++ b/image/templates/helm/stackrox-central/templates/01-central-03-diagnostics-rbac.yaml
@@ -1,20 +1,22 @@
-kind: Role
+{{- include "srox.init" . -}}
+
 apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
 metadata:
   name: stackrox-central-diagnostics
   namespace: {{ .Release.Namespace }}
   labels:
-    {{ template "defaultLabels" . }}
+    {{- include "srox.defaultLabels" . | nindent 4 }}
   annotations:
-    {{ template "defaultAnnotations" . }}
+    {{- include "srox.defaultAnnotations" . | nindent 4 }}
 rules:
-  - apiGroups:
-      - '*'
-    resources:
-      - '*'
-    verbs:
-      - get
-      - list
+- apiGroups:
+  - '*'
+  resources:
+  - '*'
+  verbs:
+  - get
+  - list
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -22,7 +24,9 @@ metadata:
   name: stackrox-central-diagnostics
   namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/name: stackrox
+    {{- include "srox.defaultLabels" . | nindent 4 }}
+  annotations:
+    {{- include "srox.defaultAnnotations" . | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
