Helm chart structure improvements/changes (#6486)

--- a/image/templates/helm/stackrox-central/templates/01-central-01-license-secret.yaml
+++ b/image/templates/helm/stackrox-central/templates/01-central-01-license-secret.yaml
@@ -1,6 +1,6 @@
 {{- include "srox.init" . -}}
 
-{{- if ._rox.central._licenseKey -}}
+{{- if ._rox._licenseKey -}}
 
 apiVersion: v1
 kind: Secret
@@ -15,6 +15,6 @@ metadata:
 type: Opaque
 stringData:
   license.lic: |
-    {{- ._rox.central._licenseKey | nindent 4 }}
+    {{- ._rox._licenseKey | nindent 4 }}
 
 {{ end }}
