--- a/image/templates/helm/stackrox-central/templates/02-scanner-06-deployment.yaml
+++ b/image/templates/helm/stackrox-central/templates/02-scanner-06-deployment.yaml
@@ -69,7 +69,7 @@ spec:
             fieldRef:
               fieldPath: metadata.namespace
         resources:
-          {{- ._rox.scanner.resources | toYaml | nindent 10 }}
+          {{- ._rox.scanner._resources | nindent 10 }}
         command:
         - /entrypoint.sh
         ports:
@@ -213,7 +213,7 @@ spec:
         - name: https-db
           containerPort: 5432
         resources:
-          {{- ._rox.scanner.dbResources | toYaml | nindent 10 }}
+          {{- ._rox.scanner._dbResources | nindent 10 }}
         securityContext:
           runAsUser: 70
           runAsGroup: 70
