New Helm Chart: Integrate exposure configuration for central (#6488)
Integrate exposure configuration for central in new Helm chart.
Co-authored-by: Malte Isberner <mi@stackrox.com>

--- a/image/templates/helm/stackrox-central/internal/config-shape.yaml
+++ b/image/templates/helm/stackrox-central/internal/config-shape.yaml
@@ -50,6 +50,16 @@ central:
       storageClass: null # string
       size: null # int | string
     none: null # bool
+  exposure:
+    loadBalancer:
+      enabled: null # bool
+      port: null # int
+    nodePort:
+      enabled: null # bool
+      port: null # int
+    route:
+      enabled: null # bool
+
 scanner:
   disable: null # bool
   replicas: null # int
