--- a/image/templates/helm/stackrox-central/templates/02-scanner-06-deployment.yaml
+++ b/image/templates/helm/stackrox-central/templates/02-scanner-06-deployment.yaml
@@ -30,7 +30,7 @@ spec:
         traffic.sidecar.istio.io/excludeInboundPorts: "8080,8443"
         {{- include "srox.defaultAnnotations" . | nindent 8 }}
     spec:
-      {{- if ._rox.env.openshift -}}
+      {{- if ._rox.env.openshift }}
       affinity:
         nodeAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
