--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2835,7 +2835,7 @@ jobs:
             gsutil cp gs://stackrox-ci-upgrade-test-dbs/41.4-upgrade-db.zip .
 
             # Restore 41.4 backup
-            roxctl -e "${API_ENDPOINT}" -p "${ROX_PASSWORD}" central db restore --file 41.4-upgrade-db.zip --timeout 2m
+            roxctl -e "${API_ENDPOINT}" -p "${ROX_PASSWORD}" central db restore --timeout 2m 41.4-upgrade-db.zip
 
       - *waitForAPI
 
@@ -2930,7 +2930,7 @@ jobs:
     executor: custom
     environment:
       - LOCAL_PORT: 443
-      - RUNTIME_SUPPORT: ebpf
+      - COLLECTION_METHOD: ebpf
       - GCP_IMAGE_TYPE: "COS"
       - MONITORING_SUPPORT: true
       - SCANNER_SUPPORT: true
@@ -2955,7 +2955,7 @@ jobs:
     executor: custom
     environment:
       - LOCAL_PORT: 8000
-      - RUNTIME_SUPPORT: ebpf
+      - COLLECTION_METHOD: ebpf
       - MONITORING_SUPPORT: true
       - SCANNER_SUPPORT: true
       - ROX_WHITELIST_GENERATION_DURATION: 1m
@@ -2985,7 +2985,7 @@ jobs:
     executor: custom
     environment:
       - LOCAL_PORT: 443
-      - RUNTIME_SUPPORT: ebpf
+      - COLLECTION_METHOD: ebpf
       - GCP_IMAGE_TYPE: "COS"
       - MONITORING_SUPPORT: true
       - SCANNER_SUPPORT: true
@@ -3014,7 +3014,7 @@ jobs:
     executor: custom
     environment:
       - LOCAL_PORT: 443
-      - RUNTIME_SUPPORT: kernel-module
+      - COLLECTION_METHOD: kernel-module
       - MONITORING_SUPPORT: true
       - SCANNER_SUPPORT: true
       - ROX_WHITELIST_GENERATION_DURATION: 1m
@@ -3088,8 +3088,8 @@ jobs:
           name: Restore DB
           command: |
             roxctl -e "${API_ENDPOINT}" -p "${ROX_PASSWORD}" central db restore \
-              --file ./qa-tests-backend/artifacts/upgrade-tests/v2.4.16.4/stackrox_db_2019_03_01_03_48_45.zip \
-              --timeout 1m
+              --timeout 1m \
+              ./qa-tests-backend/artifacts/upgrade-tests/v2.4.16.4/stackrox_db_2019_03_01_03_48_45.zip
 
       - run:
           name: Do the upgrade to 2.5.29.x-54-g70655b1846
@@ -3176,8 +3176,8 @@ jobs:
             ls -lh /tmp/stackrox-db.zip
 
             roxctl -e "${API_ENDPOINT}" -p "${ROX_PASSWORD}" central db restore \
-              --file /tmp/stackrox-db.zip \
-              --timeout 1m
+              --timeout 1m \
+              /tmp/stackrox-db.zip
             sleep 5
 
       - *waitForAPI
@@ -3263,10 +3263,10 @@ jobs:
           name: Create a "sensor-remote-new" cluster
           command: |
             roxctl -e "${API_ENDPOINT}" -p "${ROX_PASSWORD}" sensor generate k8s \
-              --image "${MAIN_IMAGE_REPO:-docker.io/stackrox/main}" \
-              --collector-image "${COLLECTOR_IMAGE_REPO:-docker.io/stackrox/collector}" \
+              --main-image-repository "${MAIN_IMAGE_REPO:-docker.io/stackrox/main}" \
+              --collector-image-repository "${COLLECTOR_IMAGE_REPO:-docker.io/stackrox/collector}" \
               --name remote-new \
-              --admission-controller
+              --create-admission-controller
 
       - deploy-sensor-via-upgrader-for-upgrade-tests:
           upgrade-process-id: 3b2cbf78-d35a-4c2c-b67b-e37f805c14da
@@ -3386,7 +3386,7 @@ jobs:
             gsutil cp gs://stackrox-ci-upgrade-test-dbs/41.4-upgrade-db.zip .
 
             # Restore 41.4 backup to 41.4 based commit
-            roxctl -e "${API_ENDPOINT}" -p "${ROX_PASSWORD}" central db restore --file 41.4-upgrade-db.zip --timeout 2m
+            roxctl -e "${API_ENDPOINT}" -p "${ROX_PASSWORD}" central db restore --timeout 2m 41.4-upgrade-db.zip
 
       - *waitForAPI
       - run:
@@ -3432,7 +3432,7 @@ jobs:
       - run:
           name: Restore 41.4 backup to current head
           command: |
-            roxctl -e "${API_ENDPOINT}" -p "${ROX_PASSWORD}" central db restore --file 41.4-upgrade-db.zip --timeout 2m
+            roxctl -e "${API_ENDPOINT}" -p "${ROX_PASSWORD}" central db restore --timeout 2m 41.4-upgrade-db.zip
 
       - *waitForAPI
       - validate-upgrade:
@@ -3453,7 +3453,7 @@ jobs:
       - run:
           name: Restore 41.4 backup to current head
           command: |
-            roxctl -e "${API_ENDPOINT}" -p "${ROX_PASSWORD}" central db restore --file 41.4-upgrade-db.zip --timeout 2m
+            roxctl -e "${API_ENDPOINT}" -p "${ROX_PASSWORD}" central db restore --timeout 2m 41.4-upgrade-db.zip
 
       - *waitForAPI
       - validate-upgrade:
@@ -3473,7 +3473,7 @@ jobs:
       - run:
           name: Restore 44 BadgerDB backup to current head
           command: |
-            roxctl -e "${API_ENDPOINT}" -p "${ROX_PASSWORD}" central db restore --file badgerdb-44-backup.zip --timeout 2m
+            roxctl -e "${API_ENDPOINT}" -p "${ROX_PASSWORD}" central db restore --timeout 2m badgerdb-44-backup.zip
 
       - *waitForAPI
       - validate-upgrade:
@@ -3493,7 +3493,7 @@ jobs:
       - run:
           name: Restore 44 RocksDB backup to current head
           command: |
-            roxctl -e "${API_ENDPOINT}" -p "${ROX_PASSWORD}" central db restore --file rocksdb-44-backup.zip --timeout 2m
+            roxctl -e "${API_ENDPOINT}" -p "${ROX_PASSWORD}" central db restore --timeout 2m rocksdb-44-backup.zip
 
       - *waitForAPI
       - validate-upgrade:
@@ -3518,7 +3518,7 @@ jobs:
       - run:
           name: "Restore RocksDB"
           command: |
-            roxctl -e "${API_ENDPOINT}" -p "${ROX_PASSWORD}" central db restore --file rocksdb-backup.zip
+            roxctl -e "${API_ENDPOINT}" -p "${ROX_PASSWORD}" central db restore rocksdb-backup.zip
 
       - *waitForAPI
       - validate-upgrade:
@@ -3667,7 +3667,7 @@ jobs:
     executor: custom
     environment:
       - LOCAL_PORT: 8000
-      - RUNTIME_SUPPORT: ebpf
+      - COLLECTION_METHOD: ebpf
       - MONITORING_SUPPORT: true
       - SCANNER_SUPPORT: true
       - ROX_WHITELIST_GENERATION_DURATION: 1m
@@ -3689,7 +3689,7 @@ jobs:
     executor: custom
     environment:
       - LOCAL_PORT: 8000
-      - RUNTIME_SUPPORT: ebpf
+      - COLLECTION_METHOD: ebpf
       - MONITORING_SUPPORT: false
       - SCANNER_SUPPORT: true
       - ROX_WHITELIST_GENERATION_DURATION: 1m
@@ -3713,7 +3713,7 @@ jobs:
     environment:
       - EKS_AUTOMATION_VERSION: 0.0.1
       - LOCAL_PORT: 8000
-      - RUNTIME_SUPPORT: kernel-module
+      - COLLECTION_METHOD: kernel-module
       - MONITORING_SUPPORT: true
       - SCANNER_SUPPORT: true
       - ROX_WHITELIST_GENERATION_DURATION: 1m
@@ -3804,7 +3804,7 @@ jobs:
     environment:
       - KOPS_AUTOMATION_VERSION: 0.2.9
       - LOCAL_PORT: 8000
-      - RUNTIME_SUPPORT: kernel-module
+      - COLLECTION_METHOD: kernel-module
       - MONITORING_SUPPORT: true
       - SCANNER_SUPPORT: true
       - ROX_WHITELIST_GENERATION_DURATION: 1m
